Closed
Bug 1347951
Opened 7 years ago
Closed 7 years ago
Checking CanDirectlyActivate() is missing in DispatchSpdyPendingQ
Categories
(Core :: Networking: HTTP, defect)
Core
Networking: HTTP
Tracking
()
RESOLVED
FIXED
mozilla55
Tracking | Status | |
---|---|---|
firefox55 | --- | fixed |
People
(Reporter: dragana, Assigned: dragana)
References
Details
(Whiteboard: [necko-active])
Attachments
(1 file)
1.73 KB,
patch
|
mayhemer
:
review+
|
Details | Diff | Splinter Review |
This is a regression from bug 1312774. I notice it while I was rebasing 1341572.
Assignee | ||
Updated•7 years ago
|
Assignee: nobody → dd.mozilla
Status: NEW → ASSIGNED
Whiteboard: [necko-active]
![]() |
||
Comment 1•7 years ago
|
||
Ups, thanks.
Assignee | ||
Comment 2•7 years ago
|
||
Attachment #8848120 -
Flags: review?(honzab.moz)
![]() |
||
Comment 3•7 years ago
|
||
Comment on attachment 8848120 [details] [diff] [review] bug_fix_h2_trans_activation.patch Review of attachment 8848120 [details] [diff] [review]: ----------------------------------------------------------------- Yep, fixes https://bugzilla.mozilla.org/attachment.cgi?id=8846322&action=diff#a/netwerk/protocol/http/nsHttpConnectionMgr.cpp_sec12 Thanks.
Attachment #8848120 -
Flags: review?(honzab.moz) → review+
Pushed by dd.mozilla@gmail.com: https://hg.mozilla.org/integration/mozilla-inbound/rev/341125a09b13 Check if a h2 connection can accept more streams before trying to dispatchach a transaction. r=mayhemer
Comment 5•7 years ago
|
||
bugherder |
https://hg.mozilla.org/mozilla-central/rev/341125a09b13
Status: ASSIGNED → RESOLVED
Closed: 7 years ago
status-firefox55:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla55
You need to log in
before you can comment on or make changes to this bug.
Description
•