Bug 1347951 - Check if a h2 connection can accept more streams before trying to dispatchach a transaction. r=mayhemer